# primecraft

./: .gitignore  LICENSE  README.md  eslint.config.cjs  eslint.config.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
src/: index.ts
src/config/: entropy.ts
src/constants/: index.ts  logger.ts  millerRabin.ts  primes.ts  rsa.ts  wheel.ts
src/core/: generateRandomBits.ts  index.ts  millerRabin.ts  strongPrime.ts
src/entropy/: rng.ts
src/generators/: generatePrimeSet.ts  index.ts  normalPrime.ts  primeBatch.ts  primeGenerator.ts  primeSet.ts  strongPrimes.ts  types.ts  worker.ts
src/generators/strategies/: index.ts  rsaMulti.ts  rsaPair.ts
src/helpers/: index.ts  wheel.ts
src/helpers/core/: getMillerRabinRounds.ts  getMinGap.ts  getOptimalWitnesses.ts  index.ts  primeFilter.ts
src/logger/: index.ts  primeLogger.ts
src/types/: generation.ts  index.ts  logger.ts
src/utils/: bigInt.ts  calculateMaxAttempts.ts  gcd.ts  generateRandomBetween.ts  index.ts  modExp.ts  validateMultiRSASet.ts
tests/: testUtils.ts
tests/integration/: prime-generation.test.ts
tests/performance/: benchmark.test.ts  normal-prime.test.ts  prime-set.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
wasm/src/constants/: crypto.rs  math.rs  mod.rs
wasm/src/entropy/: mod.rs  rng.rs  wheel.rs
wasm/src/generators/: mod.rs
wasm/src/helpers/: math.rs  mod.rs  wheel.rs
wasm/src/math/: big_int.rs  gcd.rs  mod.rs  modular.rs  properties.rs
wasm/src/types/: mod.rs
wasm/src/utils/: calculate_max_attempts.rs  mod.rs
(+19 files in other folders)
